# cdns

./: .astylerc  .clang-format  .gitattributes  .vimdir  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake.in  PKGBUILD  ReadMe.md  dash.cmake  package.h.in  pkg.install  pre-commit.sh  valgrind_linux.supp
BuildTools/: BuildTools.cmake  arm64-linux.cmake  git-version.cmake  linux-mingw32.cmake  linux-mingw64.cmake  mingw-copy-deps.sh  override_ios.cmake  project_git_version.hxx.cmakein  toolchain_ios.cmake  toolchain_ios_simulator.cmake
BuildTools/.githooks/: pre-commit  pre-push
backtrace/: .gitattributes  .gitconfig  CMakeLists.txt  backtrace.hxx  catch.hxx  dll.hxx  exceptions.hxx
backtrace/.githooks/: pre-commit  pre-push
backtrace/src/: backtrace.cpp  backtrace_config.h.cmakein  catch.cpp  demangle.cpp  exe_path.cpp
backtrace/src/tests/: btfailidivz.cpp  btfailsqrt.cpp  btfailtst.cpp  btsqrt.cpp  bttst.cpp  bttst2.cpp
crypt/: crypt.cpp  crypt.hxx
data/: apple-blacklist.txt  blacklist.txt  default.conf.in  dns-resolvers.txt  hosts  microsoft-blacklist.txt  social-blacklist.txt  systemd.service.in  systemd.socket.in  whitelist.txt
dns/: CMakeLists.txt  cache.hxx  constants.hxx  daemon.hxx  dll.hxx  filter.hxx  fwd.hxx  hosts.hxx  message_header.hxx  options.hxx  query.hxx  responder.hxx  responder_parameters.hxx
dns/crypt/: CMakeLists.txt  certificate.hxx  certifier.hxx  constants.hxx  cresponder.hxx  crypt_options.hxx  csv.hxx  daemon.hxx  dll.hxx  encryptor.hxx  message_header.hxx  resolver.hxx  server_crypt.hxx  server_responder.hxx
dns/crypt/srcz/: cdrill.cpp  certificate.cpp  certifier.cpp  cresponder.cpp  crypt_options.cpp  csv.cpp  daemon.cpp  dns-main.cpp  encryptor.cpp  pad_buffer.cpp  pad_buffer.hxx  resolver.cpp  server_crypt.cpp
dns/crypt/tests/: CMakeLists.txt  addr_t1.cpp  arr_t0.cpp  arr_t0.hxx  arr_t0_clang_fails.cpp  cache_t1.cpp  cert_t0.cpp  cert_t1.cpp  crypt_t0.cpp  crypt_t1.cpp  crypt_t2.cpp  crypt_t3.cpp  csv_t0.cpp  csv_t1.cpp  err_t1.cpp  evtst000.cpp  evtst001.cpp  evtst1.cpp  evudptst2.cpp  filter_t1.cpp  msg_t1.cpp  prov_t1.cpp  rnd_t1.cpp  seltst0.cpp  srvcli-all.cpp  srvcli-tcp.sh  srvcli-tcpudp.sh  srvcli.sh
dns/crypt/tests/data/: crypt_secret.key  dnscrypt.cert  public.key  resolvers-local1.csv  secret.key  test_public_key.h  test_secret_key.h  test_signed_certificate.h
dns/srcz/: cache.cpp  daemon.cpp  dns-example.cpp  filter.cpp  hosts.cpp  options.cpp  query.cpp  responder.cpp
dns/srcz/tests/: dns_test.hxx  hosts_t1.cpp  msg_ldns_t0.cpp  msg_t2.cpp  resolv_t1.cpp
dns/srcz/tests/data/: test1-dns-query.h  test2-dns-query.h
network/: CMakeLists.txt  address.hxx  connection.hxx  constants.hxx  dll.hxx  fwd.hxx  incoming.hxx  linux_netconf.h  listener.hxx  mingw_netconf.h  net_config.h.in  net_error.hxx  packet.hxx  preconfig.h  provider.hxx  responder.hxx  socket.hxx  timeout.hxx  upstream.hxx
network/srcz/: address.cpp  connection.cpp  incoming.cpp  listener.cpp  net_error.cpp  packet.cpp  provider.cpp  socket.cpp  timeout.cpp  upstream.cpp
network/srcz/tests/: addr_t0.cpp  pkt_t1.cpp  sock_addr_t1.cpp  sock_t0.cpp
network/tcp/: incoming.hxx  listener.hxx  upstream.hxx
network/udp/: incoming.hxx  listener.hxx  upstream.hxx
pack/: PKGBUILD.ARMv8  config.cmake
sys/: CMakeLists.txt  dll.hxx  dllexport.hxx  linux_conf.h  logger.hxx  mingw_conf.h  preconfig.h  str.hxx  sysconfig.h.in  sysunix.hxx
sys/srcz/: entropy.cpp  logger.cpp  str.cpp  sysunix.cpp
sys/srcz/tests/: log_t0.cpp
